Corrected package.js added start goodie.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "Node.JS web scraper",
+    "name": "node-js-web-scraper",
     "version": "0.0.1",
     "description": "A node.JS web/feed scraper I created to aggregate my activity on different social networks.",
     "main": "scrape.js",
@@ -7,5 +7,8 @@
     "dependencies": {
         "scrape-it": "^3.3.3",
         "xml2js": "^0.4.19"
+    },
+    "scripts": {
+        "start": "node scrape.js"
     }
 }
