sat the minimum node version with support for async await.

--- a/package.json
+++ b/package.json
@@ -10,5 +10,7 @@
     },
     "scripts": {
         "start": "node scrape.js"
-    }
+    },
+    "engines" : { "node" : ">=7.6" },
+    "engineStrict" : true
 }
