--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "xml2js": "^0.4.19"
     },
     "scripts": {
-        "start": "node scrape.js"
+        "start": "node index.js"
     },
     "engines" : { "node" : ">=7.6" },
     "engineStrict" : true
