--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "start": "node demo.js",
-        "scrape": "node demo.js"
+        "scrape": "node demo.js",
+        "test": "make test"
     },
     "dependencies": {
         "html-entities": "^1.2.1",
@@ -22,9 +23,18 @@
         "node"
     ],
     "author": "David Linke <davidlinke@gmail.com> (https://davelinke.github.io/)",
-    "license": "MIT",
+    "licenses": [
+        {
+            "type": "MIT",
+            "url": "https://github.com/brentertz/scapegoat/blob/master/LICENSE-MIT"
+        }
+    ],
     "engines": {
         "node": ">=7.6"
     },
-    "engineStrict": true
+    "engineStrict": true,
+    "devDependencies": {
+        "chai": "^4.1.2",
+        "mocha": "^4.0.1"
+    }
 }
