--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "html-entities": "^1.2.1",
+        "puppeteer": "^0.12.0",
         "scrape-it": "^3.3.3",
         "xml2js": "^0.4.19"
     },
